# notebook-chat

./: README.md  pyproject.toml  setup.sh  uninstall.sh
docs/: demo.ipynb
notebook_chat/: README.md  __init__.py
notebook_chat/cc_jupyter/: claude_client.py  config_manager.py  hooks_loader.py  magics.py  skill_loader.py
notebook_chat/skills/: ds-experiment.md  ds-model.md  ds-report.md  ds-review.md  ds-segment.md
notellm_magic/: __init__.py
notellm_magic/cc_jupyter/: config_manager.py  constants.py  history_manager.py  hooks_loader.py  magics.py  skill_loader.py
notellm_magic/skills/: ds-eda.md
